cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(PCL_TEST_PROJ)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_features_eval src/pcl_features_eval.cpp)
target_link_libraries(pcl_features_eval ${PCL_LIBRARIES})
